--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
 
 body,
+h2,
+h3,
 h1,
 input,
 button {
@@ -19,19 +21,19 @@ body {
 }
 
 .game-container {
-    width: 600px;
+    width: 400px;
     text-align: center;
     background-color: #ffffff;
-    padding: 30px;
+    padding: 20px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 h1 {
     color: #2f2d52;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .setup input {
@@ -99,12 +101,12 @@ h1 {
 }
 
 .game {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .gameStatus {
     margin-bottom: 10px;
-    font-size: 18px;
+    font-size: 16px;
     color: #2f2d51;
 }
 
@@ -114,7 +116,7 @@ h1 {
     grid-template-rows: repeat(3, 100px);
     grid-gap: 10px;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .cell {
@@ -184,14 +186,14 @@ h1 {
 #gameDifficulty {
     font-size: 14px;
     color: #ff7f7f;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .scoreboard {
     display: flex;
     justify-content: center;
     gap: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .scoreboard p {
